--- a/css/style.css
+++ b/css/style.css
@@ -17,20 +17,53 @@ h1{
 	font-family: 'Lobster', cursive;
 	font-size: 92px;
 	color: white;
-	text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;	
+	text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+	padding-top: 80px;	
+	text-align: center;
+}
+
+h2{
+	font-family: 'Poppins', sans-serif;
+	font-size: 17px;
+	color: #44593A;
+	text-align:center;
+	background-color: #C9D5C3;
+}
+
+h3{
+	font-family: 'Poppins', sans-serif;
+	color: white;
+	font-size: 40px;
+	text-transform: capitalize;
+
 }
 
 h5{
 	font-family: 'Josefin Slab', serif;
 	font-size: 17px;
+	font-weight: bold;
+	font-style: italic;
 	color: #44593A;
+}
+
+p{
+	font-family: 'Poppins', sans-serif;
+	font-size: 13px;
+	color: white;
+
 }
 
 /* HEADER */ 
 
 /* Navigation */
 
+.navbar{
+	margin: 0% 15% 3% 15%;
+}
 
+.navbar-nav li{
+	padding: 0px 20px;
+}
 
 .nav-link{
 	font-size: 16px;
@@ -39,35 +72,72 @@ h5{
 	color: #44593A;
 }
 
+
+.fa-camera {
+	color: #44593A;
+	display: inline-block;
+	float:left;
+	margin: 0px 10px 15px 0px; 
+}
+
+
+/* COMMMMMEEEE BACK AND DO HOVER AND STUFF */
+.navbar a:active{
+	color: orange;
+}
+
 /* End Navigation */
 
 
 
 .background{
 	width:100%;
-	height: 500px;
+	height: 600px;
 	background-image: url("../images/background.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 
 }
 
+.container-fluid{
+	padding-top:20px;
+}
 .container-fluid img{
-	opacity: 0.53;
+	opacity: 0.5;
 	width:100%;
 }
 
-.fa i{
-	color: #44593A;
-}
 
-.navbar a:link{
-	color: orange;
+.header-text{
+	margin: 0% 15% 3% 15%;
+
+
 }
 
 /* END HEADER */
 
 
+
+/* album-container */
+.album-container{
+	padding: 20px;
+	margin: 3% 15% 3% 15%;
+	text-align:center;
+}
+/* END album-container */
+
+
+
+/* intro-container */
+.intro-container{
+	background-color: #C9D5C3; 
+}
+
+.text-container{
+	margin: 3% 15% 3% 15%;
+	padding: 20px;
+}
+/* END intro container */
 
 
 
