--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,8 @@ h3{
 h4{
 	font-family: 'Josefin Slab', serif;
 	font-size: 25px;
+	font-weight: bold;
+	font-style: italic;
 	color: #44593A;
 }
 
@@ -151,6 +153,14 @@ p{
 	margin: 3% 15% 3% 15%;
 }
 
+.content-container .row .col-sm-6{
+	background-color: blue;
+}
+
+.content-container .row .col-sm-6 img{
+	max-width: 100%;
+	height:auto;
+}
 
 
 /* FOOTER */
